edit function for hero button

--- a/pages/home.htm
+++ b/pages/home.htm
@@ -54,7 +54,10 @@ function onStart()
 								<div class="hs-subtitle">{{ slide.subtitle|_ }}</div>
 								<h2 class="hs-title">{{ slide.title|_ }}</h2>
 								<p class="hs-des">{{ slide.description|_ }}</p>
-								<a href="{{ this.theme.hero_button_url }}"><div class="site-btn">{{ this.theme.hero_button_text }}</div></a>
+								<a href="{{ this.thame.hero_button_url }}" class="hiro-button"><div class="site-btn">{{ this.theme.hero_button_text }}</div></a>
+								<a href="{{ 'assets/img/gallery/1.jpg'|theme }}" class="hiro-button"></a>
+								<a href="{{ 'assets/img/gallery/2.jpg'|theme }}" class="hiro-button"></a>
+								<a href="{{ 'assets/img/gallery/3.jpg'|theme }}" class="hiro-button"></a>
 							</div>
 						</div>
 					</div>
